test_fixtures/for/statement_initializer.lox
// ParserError: UnexpectedExpressionToken found OpenBrace at l3c6
// ParserError: ExpectedSemicolon found CloseParen at l3c26
for ({}; a < 2; a = a + 1) {}
